# track-presence

./: Cargo.toml  LICENSE  README.md
src/: app.rs  config.rs  lib.rs  main.rs  state.rs  track.rs  utils.rs
src/presentation/: discord.rs
src/sources/: mod.rs  mpris.rs
